# rai-scan

./: CHANGELOG.md  LICENSE  README.md  SECURITY.md  install.sh  pyproject.toml  uninstall.sh
.github/workflows/: ci.yml
rai_scan/: __init__.py  cli.py  color.py  config.py  models.py  report.py  safety.py  scanner.py  signatures.json
rai_scan/classifier/: matcher.py  orphan.py  size.py
rai_scan/probes/: __init__.py  ai_related_probe.py  daemon_probe.py  fs_probe.py  pkg_probe.py  shell_probe.py
rai_scan/removal/: __init__.py  engine.py  rollback.py
rai_scan/tui/: __init__.py  guided.py
tests/: test_guided.py  test_matcher.py  test_probes.py  test_removal.py  test_report.py  test_safety.py  test_scanner.py  test_signatures.py
